# RSK_back

./: .gitignore  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.VSCodeCounter/2025-06-15_21-01-15/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
admin-panel_service/app/: config.py
admin-panel_service/app/handlers/: projects.py
admin-panel_service/app/services/: consumer.py
admin_service/: .env  docker-compose.yml  docker-compose.yml.save  dockerfile  env-example.txt  requirements.txt
admin_service/bot/: admin_config.py  config.py  main.py
auth_service/: .env  docker-compose.yml  docker-compose.yml~  dockerfile  env-example.txt  readme.md  requirements.txt  requirements_third_test.txt
auth_service/app/: alembic.ini  config.py  docker-compose.yml  main.py  requirements.txt  requirements_second_test.txt
auth_service/app/alembic/: env.py
auth_service/app/db/: session.py
orgs_service/: .env  docker-compose.yml  dockerfile  env-example.txt
orgs_service/app/: alembic.ini  config.py  main.py  schemas.py
teams_service/: .dockerignore  .env  .env-for-docker  config.py  docker-compose.yml  dockerfile  env-example.txt  main.py  readme.md  requirements.txt
teams_service/alembic/: env.py
teams_service/app/: .env-for-localhost  config.py  main.py
traefik/: docker-compose.yml
traefik/dynamic/: next-service.yml
user_profile/: .env  docker-compose.yml  dockerfile  env-example.txt  requirements.txt
user_profile/app/: .env  config.py  docker-compose.yml  main.py
(+67 files in other folders)
